use digital media key