@@ -4,21 +4,26 @@ import static eu.dissco.core.digitalspecimenprocessor.domain.EntityRelationshipT
 import static eu.dissco.core.digitalspecimenprocessor.utils.TestUtils.HANDLE;
 import static eu.dissco.core.digitalspecimenprocessor.utils.TestUtils.MAPPER;
 import static eu.dissco.core.digitalspecimenprocessor.utils.TestUtils.MEDIA_PID;
+import static eu.dissco.core.digitalspecimenprocessor.utils.TestUtils.MEDIA_PID_ALT;
+import static eu.dissco.core.digitalspecimenprocessor.utils.TestUtils.MEDIA_URL;
+import static eu.dissco.core.digitalspecimenprocessor.utils.TestUtils.MEDIA_URL_ALT;
 import static eu.dissco.core.digitalspecimenprocessor.utils.TestUtils.PHYSICAL_SPECIMEN_ID;
+import static eu.dissco.core.digitalspecimenprocessor.utils.TestUtils.PHYSICAL_SPECIMEN_ID_ALT;
+import static eu.dissco.core.digitalspecimenprocessor.utils.TestUtils.SECOND_HANDLE;
+import static eu.dissco.core.digitalspecimenprocessor.utils.TestUtils.givenDifferentUnequalSpecimen;
 import static eu.dissco.core.digitalspecimenprocessor.utils.TestUtils.givenDigitalMediaEvent;
 import static eu.dissco.core.digitalspecimenprocessor.utils.TestUtils.givenDigitalSpecimenRecord;
 import static eu.dissco.core.digitalspecimenprocessor.utils.TestUtils.givenDigitalSpecimenRecordWithMediaEr;
-import static eu.dissco.core.digitalspecimenprocessor.utils.TestUtils.givenDigitalSpecimenWrapper;
-import static eu.dissco.core.digitalspecimenprocessor.utils.TestUtils.givenDigitalSpecimenWrapperWithMediaEr;
-import static eu.dissco.core.digitalspecimenprocessor.utils.TestUtils.givenEmptyMediaProcessResult;
-import static eu.dissco.core.digitalspecimenprocessor.utils.TestUtils.givenMediaPidResponse;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.BDDMockito.then;
 
+import eu.dissco.core.digitalspecimenprocessor.domain.media.DigitalMediaKey;
 import eu.dissco.core.digitalspecimenprocessor.domain.media.DigitalMediaProcessResult;
 import eu.dissco.core.digitalspecimenprocessor.domain.specimen.UpdatedDigitalSpecimenRecord;
 import eu.dissco.core.digitalspecimenprocessor.repository.DigitalMediaRepository;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -42,76 +47,98 @@ class DigitalMediaServiceTest {
   }
 
   @Test
-  void testGetExistingMediaRelationshipsUnchanged() {
-    // Given
-    var incomingMediaEvent = givenDigitalMediaEvent();
-    var currentEntityRelationships = givenDigitalSpecimenWrapperWithMediaEr(PHYSICAL_SPECIMEN_ID,
-        true).attributes()
-        .getOdsHasEntityRelationship();
-    var currentMediaRelationships = currentEntityRelationships.stream().filter(
-            entityRelationship -> entityRelationship.getDwcRelationshipOfResource()
-                .equals(HAS_MEDIA.getName()))
-        .toList();
-    var expected = new DigitalMediaProcessResult(currentMediaRelationships, List.of(), List.of());
-    given(mediaRepository.getDigitalMediaUrisFromId(List.of(MEDIA_PID))).willReturn(
-        givenMediaPidResponse());
-
-    // When
-    var result = mediaService.getExistingDigitalMedia(currentEntityRelationships,
-        List.of(incomingMediaEvent));
-
-    // Then
-    assertThat(result).isEqualTo(expected);
-  }
-
-  @Test
-  void testGetExistingMediaRelationshipsNewMedia() {
-    // Given
-    var incomingMediaEvent = givenDigitalMediaEvent();
-    var currentEntityRelationships = givenDigitalSpecimenWrapper(true).attributes()
-        .getOdsHasEntityRelationship();
-    var expected = new DigitalMediaProcessResult(List.of(), List.of(), List.of(incomingMediaEvent));
+  void testGetExistingDigitalMediaNew() {
+    //
+    var firstRecord = givenDigitalSpecimenRecord();
+    var secondRecord = givenDifferentUnequalSpecimen(SECOND_HANDLE, PHYSICAL_SPECIMEN_ID_ALT);
+    var currentSpecimens = Map.of(PHYSICAL_SPECIMEN_ID, firstRecord, PHYSICAL_SPECIMEN_ID_ALT,
+        secondRecord);
+    var firstMediaEventA = givenDigitalMediaEvent();
+    var firstMediaEventB = givenDigitalMediaEvent(PHYSICAL_SPECIMEN_ID, MEDIA_URL_ALT);
+    var secondMediaEvent = givenDigitalMediaEvent(PHYSICAL_SPECIMEN_ID_ALT);
+    var expected = Map.of(
+        HANDLE, new DigitalMediaProcessResult(List.of(), List.of(),
+            List.of(firstMediaEventA, firstMediaEventB)),
+        SECOND_HANDLE,
+        new DigitalMediaProcessResult(List.of(), List.of(), List.of(secondMediaEvent))
+    );
     given(mediaRepository.getDigitalMediaUrisFromId(List.of())).willReturn(Map.of());
 
     // When
-    var result = mediaService.getExistingDigitalMedia(currentEntityRelationships,
-        List.of(incomingMediaEvent));
+    var result = mediaService.getExistingDigitalMedia(currentSpecimens,
+        List.of(firstMediaEventA, firstMediaEventB, secondMediaEvent));
 
     // Then
-    assertThat(result).isEqualTo(expected);
+    assertThat(expected).isEqualTo(result);
   }
 
   @Test
-  void testGetExistingMediaRelationshipsTombstoneMedia() {
+  void testGetExistingMediaRelationshipsUnchanged() {
     // Given
-    var currentEntityRelationships = givenDigitalSpecimenWrapperWithMediaEr(PHYSICAL_SPECIMEN_ID,
-        false).attributes()
-        .getOdsHasEntityRelationship();
-    var expected = new DigitalMediaProcessResult(List.of(), currentEntityRelationships, List.of());
-    given(mediaRepository.getDigitalMediaUrisFromId(List.of(MEDIA_PID))).willReturn(
-        givenMediaPidResponse());
+    var firstRecord = givenDigitalSpecimenRecordWithMediaEr();
+    var secondRecord = givenDigitalSpecimenRecordWithMediaEr(SECOND_HANDLE,
+        PHYSICAL_SPECIMEN_ID_ALT, true, 1, MEDIA_PID_ALT);
+    var secondRecordMediaER = secondRecord.digitalSpecimenWrapper().attributes()
+        .getOdsHasEntityRelationship().stream()
+        .filter(er -> er.getDwcRelationshipOfResource().equals(HAS_MEDIA.getName()))
+        .toList();
+    var currentSpecimens = Map.of(PHYSICAL_SPECIMEN_ID, firstRecord, PHYSICAL_SPECIMEN_ID_ALT,
+        secondRecord);
+    var mediaEvents = List.of(givenDigitalMediaEvent(),
+        givenDigitalMediaEvent(PHYSICAL_SPECIMEN_ID_ALT, MEDIA_URL_ALT));
+    var expected = Map.of(
+        HANDLE, new DigitalMediaProcessResult(firstRecord.digitalSpecimenWrapper().attributes()
+            .getOdsHasEntityRelationship(), List.of(), List.of()),
+        SECOND_HANDLE, new DigitalMediaProcessResult(secondRecordMediaER, List.of(), List.of()));
+    given(mediaRepository.getDigitalMediaUrisFromId(anyList())).willReturn(Map.of(
+        new DigitalMediaKey(HANDLE, MEDIA_URL), MEDIA_PID,
+        new DigitalMediaKey(SECOND_HANDLE, MEDIA_URL_ALT), MEDIA_PID_ALT));
 
     // When
-    var result = mediaService.getExistingDigitalMedia(currentEntityRelationships,
-        List.of());
+    var result = mediaService.getExistingDigitalMedia(currentSpecimens, mediaEvents);
 
     // Then
-    assertThat(result).isEqualTo(expected);
+    assertThat(expected).isEqualTo(result);
   }
 
   @Test
-  void testGetExistingMediaNoMedia() {
+  void testGetExistingMediaRelationshipsTombstone() {
     // Given
-    var currentEntityRelationships = givenDigitalSpecimenWrapper(true).attributes()
-        .getOdsHasEntityRelationship();
-    var expected = givenEmptyMediaProcessResult();
+    var firstRecord = givenDigitalSpecimenRecordWithMediaEr();
+    var secondRecord = givenDigitalSpecimenRecordWithMediaEr(SECOND_HANDLE,
+        PHYSICAL_SPECIMEN_ID_ALT, false, 1, MEDIA_PID_ALT);
+    var currentSpecimens = Map.of(PHYSICAL_SPECIMEN_ID, firstRecord, PHYSICAL_SPECIMEN_ID_ALT,
+        secondRecord);
+    var expected = Map.of(
+        HANDLE, new DigitalMediaProcessResult(List.of(),
+            firstRecord.digitalSpecimenWrapper().attributes().getOdsHasEntityRelationship(),
+            List.of()),
+        SECOND_HANDLE, new DigitalMediaProcessResult(List.of(),
+            secondRecord.digitalSpecimenWrapper().attributes().getOdsHasEntityRelationship(),
+            List.of()));
+    given(mediaRepository.getDigitalMediaUrisFromId(anyList())).willReturn(Map.of(
+        new DigitalMediaKey(HANDLE, MEDIA_URL), MEDIA_PID,
+        new DigitalMediaKey(SECOND_HANDLE, MEDIA_URL_ALT), MEDIA_PID_ALT));
 
     // When
-    var result = mediaService.getExistingDigitalMedia(currentEntityRelationships,
-        List.of());
+    var result = mediaService.getExistingDigitalMedia(currentSpecimens, Collections.emptyList());
 
     // Then
-    assertThat(result).isEqualTo(expected);
+    assertThat(expected).isEqualTo(result);
+  }
+
+  @Test
+  void testGetExistingMediaRelationshipsNoMedia() {
+    // Given
+    var currentSpecimens = Map.of(PHYSICAL_SPECIMEN_ID, givenDigitalSpecimenRecord());
+    var expected = Map.of(HANDLE, new DigitalMediaProcessResult(List.of(), List.of(), List.of()));
+    given(mediaRepository.getDigitalMediaUrisFromId(anyList())).willReturn(Map.of());
+
+    // When
+    var result = mediaService.getExistingDigitalMedia(currentSpecimens, List.of());
+
+    // Then
+    assertThat(expected).isEqualTo(result);
   }
 
   @Test
@@ -139,25 +166,6 @@ class DigitalMediaServiceTest {
 
     // Then
     then(mediaRepository).should().removeSpecimenRelationshipsFromMedia(List.of(MEDIA_PID));
-  }
-
-  @Test
-  void testRemoveSpecimenRelationshipsFromMediaNoMedia() {
-    // Given
-    var updatedSpecimenRecord = new UpdatedDigitalSpecimenRecord(
-        givenDigitalSpecimenRecord(),
-        List.of(),
-        givenDigitalSpecimenRecord(),
-        MAPPER.createObjectNode(),
-        List.of(),
-        givenEmptyMediaProcessResult()
-    );
-
-    //When
-    mediaService.removeSpecimenRelationshipsFromMedia(Set.of(updatedSpecimenRecord));
-
-    // Then
-    then(mediaRepository).shouldHaveNoInteractions();
   }
 
 }
